k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project4-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project4
  template:
    metadata:
      labels:
        app: project4
    spec:
      containers:
        - name: project4-container
          image: alyyasser10/project4-app:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
