k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project4-service
spec:
  type: LoadBalancer
  selector:
    app: project4
  ports:
    - port: 80
      targetPort: 4000
      nodePort: 30008
